lógica para aparecer os gráficos de acordo o tipo de dados

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/sala.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/sala.html
@@ -12,7 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 
-    <title>Sala 2C</title>
+    <title></title>
 </head>
 
 <body>
@@ -101,6 +101,7 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
+                    <i id="lumi-block" class="fas fa-ban blocked occult"></i>
                     <canvas width="400px" class=" chart" id="chartLuminosity"></canvas>
                 </div>
             </div>
@@ -110,8 +111,8 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
-                    <i style="font-size: 253.7px; color:#adadad" class="fas fa-ban"></i>
-                    <!-- <canvas width="400px" class=" chart" id="chartHumidity"></canvas> -->
+                    <i id="humi-block" class="fas fa-ban blocked occult"></i>
+                    <canvas width="400px" class=" chart" id="chartHumidity"></canvas>
                 </div>
             </div>
             <div class="panel">
@@ -120,6 +121,7 @@
                     <hr class="pink-stroke" />
                 </div>
                 <div>
+                    <i id="temp-block" class="fas fa-ban blocked occult"></i>
                     <canvas width="400px" class=" chart" id="chartTemperature"></canvas>
                 </div>
             </div>
