--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -35,7 +35,8 @@
         <div class="forms-container">
             <div class="signin-signup">
                 <!--Formulário de Login-->
-                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login()" action="javascript:void(0)">
+                <form id="form_login" autocomplete="off" class="sign-in-form" onsubmit="login()"
+                    action="javascript:void(0)">
                     <h2 class="title">Bem-vindo</h2>
                     <!-- RADION BUTTONS -->
                     <div class="input-radio">
@@ -74,7 +75,8 @@
                 </form>
 
                 <!--Formulário de Cadastro-->
-                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()" action="javascript:void(0)">
+                <form id="form_cadastro" class="sign-up-form" autocomplete="off" onsubmit="cadastrar()"
+                    action="javascript:void(0)">
 
                     <div class="step-row">
                         <div id="progress" class="progress"></div>
@@ -113,7 +115,8 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-road"></i>
-                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa" placeholder="Logradouro">
+                                <input id="logradouroEmpresa" type="text" name="logradouroEmpresa"
+                                    placeholder="Logradouro">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-globe"></i>
@@ -165,7 +168,8 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-plus"></i>
-                                <input id="complementoEmpresa" type="text" name="complementoEmpresa" placeholder="Complemento">
+                                <input id="complementoEmpresa" type="text" name="complementoEmpresa"
+                                    placeholder="Complemento">
                             </div>
 
 
@@ -179,11 +183,13 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa" type="password" placeholder="Senha">
+                                <input id="cadastroPassword" onkeyup="checkPassword()" name="senhaEmpresa"
+                                    type="password" placeholder="Senha">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-lock"></i>
-                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password" placeholder="Confirme sua senha">
+                                <input id="confirmacaoPassword" onkeyup="checkPassword()" type="password"
+                                    placeholder="Confirme sua senha">
                             </div>
 
 
@@ -261,10 +267,9 @@
             </div>
         </div>
     </div>
-
+    <script src="../src/js/alerts.js"></script>
     <script src="../src/js/login.js"></script>
     <script src="../src/js/sign.js"></script>
-    <script src="../src/js/alerts.js"></script>
 </body>
 
 </html>
