Tela de adicionar sala feita

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -36,7 +36,8 @@
                         <span class="nav_name">Messages</span>
                     </a>
 
-                    <a title="cadastrar Responsável" id="cadastro_responsavel" href="cadastro-responsavel.html" class="nav_link ">
+                    <a title="cadastrar Responsável" id="cadastro_responsavel" href="cadastro-responsavel.html"
+                        class="nav_link ">
                         <i class='bx bx-user-plus nav_icon'></i>
                         <span class="nav_name">Add User</span>
                     </a>
@@ -55,6 +56,17 @@
                 <hr class="pink-stroke" />
             </div>
             <section class="rooms-container">
+
+                <div class="no-rooms">
+                    <h1>Você não possui nenhuma sala, entre em contato conosco.</h1>
+                    <a href="https://app.pipefy.com/public/form/2yHzBSkq" target="_blank" rel="noopener noreferrer">
+                        <div class="add-btn">
+                            <i class="fas fa-plus"></i>
+
+                        </div>
+                    </a>
+                </div>
+
             </section>
             <!-- <section class="box-container">
                 <div class="boxes">
