Bug img integrante equipe corrigido

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/index.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/index.html
@@ -59,8 +59,7 @@
                     </div>
 
                     <div class="text">
-                        <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para
-                            aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
+                        <p>Somos uma empresa que juntamente com a tecnologia, visamos propor soluções tecnológicas para aumentar o desempenho e a produtivade dentro de ambientes empresariais.</p>
                     </div>
                     <div class="box">
                         <div class="container">
@@ -68,14 +67,12 @@
                             <div class="box-item">
                                 <img src="./src/img/Icones/goal.png">
                                 <h3>Missão</h3>
-                                <p>Atender às necessidades de nossos clientes e superar as expectativas, oferecendo
-                                    muito mais que produtos e serviços.</p>
+                                <p>Atender às necessidades de nossos clientes e superar as expectativas, oferecendo muito mais que produtos e serviços.</p>
                             </div>
                             <div class="box-item">
                                 <img src="./src/img/Icones/goal (1).png">
                                 <h3>Visão</h3>
-                                <p> Ser referência em inovação e qualidade, agregando bem-estar e conforto aos ambientes
-                                    empresariais. </p>
+                                <p> Ser referência em inovação e qualidade, agregando bem-estar e conforto aos ambientes empresariais. </p>
                             </div>
                             <div class="box-item">
                                 <img src="./src/img/Icones/learning.png">
@@ -154,8 +151,7 @@
                                             <h3>Jhonatan Harissa</h3>
                                             <p>Desenvolvedor Back-end</p>
                                         </div>
-                                        <img
-                                            src="src/img/Equipe/Jhonatan.jpg">
+                                        <img src="src/img/Equipe/Jhonatan.jpg">
                                     </div>
                                 </div>
                             </div>
@@ -167,8 +163,7 @@
                                             <h3>Leonardo Ianotta</h3>
                                             <p>Desenvolvedor Back-end</p>
                                         </div>
-                                        <img
-                                            src="../Site Institucional/src/img/Equipe/Leonardo test.jpeg">
+                                        <img src="src/img/Equipe/Leonardo test.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -261,11 +256,8 @@
 
                     </form>
                     <div id="div_javascript" class="div_visualizar">
-                        Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span
-                            id="result_absent"></span>% de absentismo
-                        e com ela a sua empresa irá economizar uma média de R$ <span id="result_eco"></span>, aumentando
-                        a produtividade da
-                        sua empresa em <span id="result_porcent"></span>% por um preço de R$ <span id="result_price">
+                        Sem a RelaxMachine a sua empresa <span id="result_name"></span> tem uma média <span id="result_absent"></span>% de absentismo e com ela a sua empresa irá economizar uma média de R$ <span id="result_eco"></span>, aumentando a produtividade
+                        da sua empresa em <span id="result_porcent"></span>% por um preço de R$ <span id="result_price">
 
                         </span>
                     </div>
