--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -119,7 +119,7 @@
                                 <i class="fas fa-globe"></i>
                                 <select id="selectUF" name="ufEmpresa" placeholder="UF">
                                     <option disabled selected>Selectione um UF</option>
-                                    <option>AC</option>
+                                    <option value="AC">AC</option>
                                     <option value="AL">AL</option>
                                     <option value="AM">AM</option>
                                     <option value="AP">AP</option>
