Tela de responsaveis cadastrados

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -26,7 +26,7 @@
                         <span class="nav_name">Users</span>
                     </a>
 
-                    <a href="#" class="nav_link">
+                    <a href="#" class="nav_link selected">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
