--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/responsavel.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/responsavel.html
@@ -21,26 +21,26 @@
             <div>
                 <a href="#" class="nav_logo">
                 </a>
+
                 <div class="nav_list">
 
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-user nav_icon'></i>
-                        <span class="nav_name">Users</span>
+                    <a title="Voltar" href="./dashboard.html" class="go-back nav_link ">
+                        <i class="fas fa-arrow-left"></i>
                     </a>
 
-                    <a href="dashboard.html" class="nav_link">
+                    <a title="Gráficos" href="dashboard.html" class="nav_link">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
 
-                    <a href="#" class="nav_link">
-                        <i class='far fa-bell nav_icon'></i>
-                        <span class="nav_name">Messages</span>
-                    </a>
-
-                    <a href="#" class="nav_link selected">
+                    <a title="Cadastrar Responsável" href="responsavel.html" class="nav_link selected">
                         <i class='bx bx-user-plus nav_icon'></i>
                         <span class="nav_name">Add user</span>
+                    </a>
+
+                    <a title="Dúvidas" id="cadastro_responsavel" href="https://app.pipefy.com/public/form/Kz8LHmom" target="_blank" class="nav_link ">
+                        <i class="far fa-question-circle"></i>
+                        <span class="nav_name">Question</span>
                     </a>
                 </div>
             </div>
