--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/sala.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/sala.html
@@ -22,34 +22,8 @@
                 <a href="#" class="nav_logo">
                 </a>
                 <div class="nav_list">
-                    <a href="./dashboard.html" class="go-back nav_link ">
+                    <a title="Voltar" href="./dashboard.html" class="go-back nav_link ">
                         <i class="fas fa-arrow-left"></i>
-                    </a>
-
-
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-user nav_icon'></i>
-                        <span class="nav_name">Users</span>
-                    </a>
-
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-grid-alt nav_icon'></i>
-                        <span class="nav_name">Dashboard</span>
-                    </a>
-
-                    <a href="#" class="nav_link">
-                        <i class='far fa-bell nav_icon'></i>
-                        <span class="nav_name">Messages</span>
-                    </a>
-
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
-                        <span class="nav_name">Analytics</span>
-                    </a>
-
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">Data</span>
                     </a>
                 </div>
             </div>
