--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -21,28 +21,23 @@
                 </a>
                 <div class="nav_list">
 
-                    <a title="Usuário" href="#" class="nav_link">
-                        <i class='bx bx-user nav_icon'></i>
-                        <span class="nav_name">Users</span>
-                    </a>
-
-                    <a href="#" class="nav_link selected">
+                    <a title="Gráficos" href="dashboard.html" class="nav_link selected">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
 
-                    <a href="#" class="nav_link">
-                        <i class='far fa-bell nav_icon'></i>
-                        <span class="nav_name">Messages</span>
+                    <a title="Cadastrar Responsável" href="responsavel.html" class="nav_link">
+                        <i class='bx bx-user-plus nav_icon'></i>
+                        <span class="nav_name">Add user</span>
                     </a>
 
-                    <a title="cadastrar Responsável" id="cadastro_responsavel" href="cadastro-responsavel.html" class="nav_link ">
-                        <i class='bx bx-user-plus nav_icon'></i>
-                        <span class="nav_name">Add User</span>
+                    <a title="Dúvidas" id="cadastro_responsavel" href="https://app.pipefy.com/public/form/Kz8LHmom" target="_blank" class="nav_link ">
+                        <i class="far fa-question-circle"></i>
+                        <span class="nav_name">Question</span>
                     </a>
                 </div>
             </div>
-            <a onclick="log_out()" class="nav_link" href="login.html">
+            <a href="login.html" class="nav_link">
                 <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">Log Out</span>
             </a>
