Adicionando a rota de consulta dos responsáveis cadastrados

--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/dashboard.html
@@ -26,9 +26,10 @@
                         <span class="nav_name">Dashboard</span>
                     </a>
 
-                    <a title="Cadastrar Responsável" href="responsavel.html" class="nav_link">
+                    <a title="cadastrar Responsável" id="cadastro_responsavel" href="responsavel.html"
+                        class="nav_link ">
                         <i class='bx bx-user-plus nav_icon'></i>
-                        <span class="nav_name">Add user</span>
+                        <span class="nav_name">Add User</span>
                     </a>
 
                     <a title="Dúvidas" id="cadastro_responsavel" href="https://app.pipefy.com/public/form/Kz8LHmom" target="_blank" class="nav_link ">
@@ -53,14 +54,14 @@
 
                 <div class="no-rooms">
                     <h1>Você não possui nenhuma sala, entre em contato conosco.</h1>
-                    <a href="https://app.pipefy.com/public/form/2yHzBSkq" target="_blank" rel="noopener noreferrer">
-                        <div class="add-btn">
-                            <i class="fas fa-plus"></i>
-
-                        </div>
-                    </a>
                 </div>
+                
+                <a href="https://app.pipefy.com/public/form/2yHzBSkq" target="_blank" rel="noopener noreferrer">
+                    <div class="add-btn">
+                        <i class="fas fa-plus"></i>
 
+                    </div>
+                </a>
             </section>
             <!-- <section class="box-container">
                 <div class="boxes">
