--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/pages/login.html
@@ -96,7 +96,7 @@
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-phone-alt"></i>
-                                <input id="telEmpresa" name="telefoneEmpresa" placeholder="Telefone">
+                                <input id="telEmpresa" name="telefoneEmpresa" placeholder="Telefone" maxlength="11" onkeypress="return isNumber(event)">
                             </div>
                             <div class="input-field">
                                 <i class="fas fa-envelope"></i>
